RESOLVED FIXED230321
5 Media API tests are flakily timing out on iOS14
https://bugs.webkit.org/show_bug.cgi?id=230321
Summary 5 Media API tests are flakily timing out on iOS14
Eric Hutchison
Reported 2021-09-15 14:42:50 PDT
TestWebKitAPI.WebKit.WKWebViewIsPlayingAudio TestWebKitAPI.WKWebViewPausePlayingAudioTests.InWindow TestWebKitAPI.WKWebViewPausePlayingAudioTests.OutOfWindow TestWebKitAPI.RequiresUserActionForPlaybackTest.DoesNotRequireUserActionForMediaPlayback TestWebKitAPI.SleepDisabler.Loop are flakily timing out on iOS14. History: https://results.webkit.org/?suite=api-tests&suite=api-tests&suite=api-tests&suite=api-tests&suite=api-tests&test=TestWebKitAPI.WKWebViewPausePlayingAudioTests.InWindow&test=TestWebKitAPI.WKWebViewPausePlayingAudioTests.OutOfWindow&test=TestWebKitAPI.RequiresUserActionForPlaybackTest.DoesNotRequireUserActionForMediaPlayback&test=TestWebKitAPI.RequiresUserActionForPlaybackTest.DoesNotRequireUserActionForMediaPlayback&test=TestWebKitAPI.SleepDisabler.Loop Unable to reproduce timeouts.
Attachments
Patch (4.88 KB, patch)
2022-04-04 14:13 PDT, Eric Carlson
no flags
Radar WebKit Bug Importer
Comment 1 2021-09-15 14:43:44 PDT
Eric Hutchison
Comment 2 2021-10-07 14:16:42 PDT
With exception of TestWebKitAPI.WKWebViewPausePlayingAudioTests.OutOfWindow, all of these tests last timed out on r283613. There have been no timeouts in past ~100 builds. TestWebKitAPI.WKWebViewPausePlayingAudioTests.OutOfWindow now appears to be a constant timeout on iOS15. History: https://results.webkit.org/?suite=api-tests&suite=api-tests&suite=api-tests&suite=api-tests&suite=api-tests&test=TestWebKitAPI.RequiresUserActionForPlaybackTest.DoesNotRequireUserActionForMediaPlayback&test=TestWebKitAPI.SleepDisabler.Loop&test=TestWebKitAPI.WKWebViewPausePlayingAudioTests.InWindow&test=TestWebKitAPI.WKWebViewPausePlayingAudioTests.OutOfWindow&test=TestWebKitAPI.WebKit.WKWebViewIsPlayingAudio Reproduced timeout locally on r283279 using run-api-tests --iterations 50 --ios-simulator TestWebKitAPI.WKWebViewPausePlayingAudioTests.OutOfWindow
Ryan Haddad
Comment 3 2021-10-13 17:19:41 PDT
Disabled TestWebKitAPI.WKWebViewPausePlayingAudioTests.OutOfWindow as part of https://trac.webkit.org/changeset/284133
Eric Carlson
Comment 4 2022-04-04 14:13:06 PDT
EWS
Comment 5 2022-04-05 10:39:56 PDT
Committed r292401 (249264@main): <https://commits.webkit.org/249264@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 456630 [details].
Note You need to log in before you can comment on or make changes to this bug.