5 Media API tests are flakily timing out on iOS14 https://bugs.webkit.org/show_bug.cgi?id=230321 <rdar://problem/83168970>

Reviewed by Jer Noble.

Source/WebKit:

Un-skipped API test WKWebViewPausePlayingAudioTests.OutOfWindow

* UIProcess/ios/WebPageProxyIOS.mm:
(WebKit::WebPageProxy::applicationWillEnterForegroundForMedia): Log the correct name.

* WebProcess/WebPage/ios/WebPageIOS.mm:
(WebKit::WebPage::applicationDidEnterBackgroundForMedia): Call PlatformMediaSessionManager.
(WebKit::WebPage::applicationWillEnterForegroundForMedia): Ditto.

Tools:

* TestWebKitAPI/Tests/ios/WKWebViewPausePlayingAudioTests.mm:
(TestWebKitAPI::TEST):

Canonical link: https://commits.webkit.org/249264@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@292401 268f45cc-cd09-0410-ab3c-d52691b4dbfc